# mcp-checkup

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: check.yaml  ci.yaml  codeql.yaml  docs.yaml  pr_style.yaml  release.yaml
GALLERY/: index.html
docs/: GALLERY.md  index.md
logs/: .1c04a2b9839538b71a2f0cf38a52a0ef8ea8a28e-audit.json
schemas/: report.v1.json
scripts/: update_pricing.py  weigh_gallery.py
search/: search_index.json
src/mcp_checkup/: __init__.py  __main__.py  badge.py  baseline.py  cli.py  compress.py  diffcmd.py  fixer.py  html_report.py  markdown.py  models.py  precise.py  pricing.py  proxy.py  render.py  scan.py  serialize.py  tokens.py  transport.py
src/mcp_checkup/checks/: __init__.py  base.py  security.py  weight.py
src/mcp_checkup/data/: __init__.py  pricing.json
src/mcp_checkup/discovery/: __init__.py  base.py  claude_code.py  claude_desktop.py  cursor.py  vscode.py  windsurf.py
tests/: test_badge.py  test_baseline.py  test_checks_engine.py  test_checks_security.py  test_checks_weight.py  test_cli.py  test_compress.py  test_diffcmd.py  test_discovery.py  test_exit_codes.py  test_fixer.py  test_html_report.py  test_markdown.py  test_perf.py  test_precise.py  test_pricing.py  test_proxy.py  test_render.py  test_report_schema.py  test_rugpull.py  test_scan.py  test_serialize.py  test_tokens.py  test_transport.py
tests/fixtures/: toy_server.py
